--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
-
-  {% include head.html %}
-
+  <head>
+    <title>Xyncro Projects</title>
+    <meta charset="utf-8" />
+  </head>
   <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
+    {% include structure/core.html %}
+    {{ content }}
+    {% include debug.html %}
   </body>
-
 </html>
