--- a/_includes/structure/core.html
+++ b/_includes/structure/core.html
@@ -1,3 +1,4 @@
+{% include structure/top.html %}
 {% include structure/projects.html %}
 {% include structure/description.html %}
 {% include structure/sections.html %}
