--- a/_includes/structure/description.html
+++ b/_includes/structure/description.html
@@ -1,4 +1,4 @@
 {% if page.collection != null %}
 {% assign project = site.data.projects[page.collection] %}
-<p>{{ project.description }}</p>
+<h1>{{ project.description }}</h1>
 {% endif %}
