--- a/_sass/global/_code.scss
+++ b/_sass/global/_code.scss
@@ -1,4 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=Source+Code+Pro");
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
 
 @import "global/colours";
 
