--- a/_sass/global/_fonts.scss
+++ b/_sass/global/_fonts.scss
@@ -1,4 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=Roboto:200,300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Roboto:200,300,400,500");
 
 // Sizes
 
