--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,6 @@
     <div id="content">
       {{ content }}
     </div>
-    {% comment %}
-    {% include debug.html %}
-    {% endcomment %}
+    <!--% include debug.html %-->
   </body>
 </html>
