--- a/_includes/structure/top.html
+++ b/_includes/structure/top.html
@@ -1,12 +1,12 @@
 <nav id="top">
   <ul>
     <li>
-      {% if page.url == "/index.html" %}
+      {% if page.url == "/" %}
       {% assign class = "active" %}
       {% else %}
       {% assign class = "" %}
       {% endif %}
-      <a href="/" class="{{ class }}">..</a>
+      <a href="/" class="{{ class }}">_</a>
     </li>
   </ul>
 </nav>
