--- a/_includes/updates/feed.html
+++ b/_includes/updates/feed.html
@@ -1,9 +1,16 @@
-{% if page.collection != null %}
-{% assign updates = site.posts | where: "project", page.collection %}
+{% if include.project != null %}
+{% assign updates = site.posts | where: "project", include.project %}
 {% else %}
 {% assign updates = site.posts %}
 {% endif %}
-
 {% for update in updates %}
-{{ update.excerpt }}
+{% assign project = site.data.projects[update.project] %}
+<h2>{{ update.title }}</h2>
+<dl>
+  <dt>Project</dt>
+  <dd>{{ project.name }}</dd>
+  <dt>Date</dt>
+  <dd>{{ update.date | date: "%d.%m.%Y" }}</dd>
+</dl>
+{{ update.content }}
 {% endfor %}
