--- a/_sass/global/_fonts.scss
+++ b/_sass/global/_fonts.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:200,300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Roboto:200,300,500");
 
 // Sizes
 
@@ -12,5 +12,6 @@ $s-body: 14px;
 
 $w-display: 200;
 $w-block: 300;
+$w-strong: 500;
 
 
