--- a/_sass/sectional/_content.scss
+++ b/_sass/sectional/_content.scss
@@ -1,8 +1,9 @@
 @import "global/colours";
 @import "global/fonts";
+@import "sectional/updates";
 
 #content {
-    margin-top: 77px;
+    margin: 137px 0 60px 520px;
     width: 500px;
 
     a {
