--- a/_sass/global/_base.scss
+++ b/_sass/global/_base.scss
@@ -9,11 +9,8 @@ body {
     font-size: $s-body;
     font-weight: $w-block;
 
-    display: -ms-flex;
-    display: -webkit-flex;
-    display: flex;
-
-    margin: 60px 0;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -24,7 +21,11 @@ a {
 }
 
 p {
-    margin: 0;
-    padding: 0 0 20px 0;
+    margin: 0 0 20px 0;
+    padding: 0;
     line-height: 21px;
+}
+
+strong {
+    font-weight: $w-strong;
 }
